Bug 1128535 - Inline getters/setters in Ion even if type information is bad. r=efaust