js/src/jit/BaselineInspector.h
@@ -119,9 +119,12 @@ class BaselineInspector
     DeclEnvObject *templateDeclEnvObject();
     CallObject *templateCallObject();
 
-    JSObject *commonGetPropFunction(jsbytecode *pc, Shape **lastProperty, JSFunction **commonGetter,
-                                    Shape **globalShape);
-    JSObject *commonSetPropFunction(jsbytecode *pc, Shape **lastProperty, JSFunction **commonSetter);
+    bool commonGetPropFunction(jsbytecode *pc, JSObject **holder, Shape **holderShape,
+                               JSFunction **commonGetter, Shape **globalShape, bool *isOwnProperty,
+                               ShapeVector &receiverShapes);
+    bool commonSetPropFunction(jsbytecode *pc, JSObject **holder, Shape **holderShape,
+                               JSFunction **commonSetter, bool *isOwnProperty,
+                               ShapeVector &receiverShapes);
 
     bool instanceOfData(jsbytecode *pc, Shape **shape, uint32_t *slot, JSObject **prototypeObject);
 };
